<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent">
    <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/message_info_header"
            android:gravity="center_horizontal"/>
    <GridLayout android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:columnCount="2"
                android:useDefaultMargins="true">
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/message_title"
                android:layout_row="0"
                android:layout_column="0"/>
        <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:hint="@string/message_title"
                android:ems="10"
                android:id="@+id/messageTitle"
                android:layout_row="0"
                android:layout_column="1"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/message_description"
                android:layout_row="1"
                android:layout_column="0"/>
        <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine"
                android:scrollbarAlwaysDrawVerticalTrack="true"
                android:lines="3"
                android:hint="@string/message_description"
                android:ems="10"
                android:id="@+id/messageDescription"
                android:layout_row="1"
                android:layout_column="1"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/message_duration"
                android:layout_row="2"
                android:layout_column="0"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:id="@+id/messageDuration"
                android:layout_row="2"
                android:layout_column="1"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/message_author"
                android:layout_row="3"
                android:layout_column="0"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:id="@+id/messageAuthor"
                android:layout_row="3"
                android:layout_column="1"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/message_created"
                android:layout_row="4"
                android:layout_column="0"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:id="@+id/messageCreated"
                android:layout_row="4"
                android:layout_column="1"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/message_reply_to"
                android:id="@+id/replyToLabel"
                android:layout_row="5"
                android:layout_column="0"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:id="@+id/replyTo"
                android:layout_row="5"
                android:layout_column="1"/>
    </GridLayout>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal">
        <Button
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/message_send"
                android:id="@+id/sendOrReplyMessage"/>
        <Button
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/message_back_to_record"
                android:id="@+id/backToRecord"/>
    </LinearLayout>
</LinearLayout>